[package]
name = "svt-downloader"
version = "0.1.0"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "3.0"
ftp = "3.0"
netrc = "0.4"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny_http = "0.7"
